feat(scheduling):jitsi and uploads
